# Proyecto-GIMP-XYZ

./: .gitignore  CMakeLists.txt  README.md  funciones.h  main.cpp
clases/: CFiguraGeometrica.cpp  CFiguraGeometrica.h  CLinea.cpp  CLinea.h  CRectangulo.cpp  CRectangulo.h  Circulo.cpp  Circulo.h  Coordenada.cpp  Coordenada.h  Pizarra.cpp  Pizarra.h  Triangulo.cpp  Triangulo.h
constantes/: Matriz.cpp
helpers/: TextTable.cpp  TextTable.h
